# song-metadata-checker

./: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  NGINX_PROXY_SETUP.md  PROJECT_STATUS.md  QQ_MUSIC_API_SETUP_GUIDE.md  QUICKSTART.md  README.md  nginx.conf  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  setup-husky.sh  setup-nginx-proxy.sh
.agents/: doc-review-config.yml
.agents/rules/: agent-config.md  doc-authorities.md  naming-config.md  review-config.md
.gemini/: settings.json
.husky/: pre-commit
.windsurf/: DOC_STANDARDS_SEPARATION.md  DOC_SYSTEM_QUICK_REF.md  HUSKY_INTEGRATION.md  HUSKY_QUICK_REF.md  STANDARD_DOC_SYSTEM.md
.windsurf/archive/: IMPLEMENTATION_SUMMARY.md
.windsurf/rules/: agent-config.md  doc-authorities.md  naming-config.md  review-config.md
.windsurf/workflows/: doc-review.md
dify-workflow/: ACCURATE_COMPARISON.md  BASE_OUTPUT_REFACTOR.md  BUILD_GUIDE.md  BUNDLE_CHECK_REPORT.md  BUNDLE_VS_DOC_COMPARISON.md  DIFY_BUILD_ANALYSIS.md  DOC_MIGRATION_ASSESSMENT.md  DOC_MIGRATION_REVIEW.md  PYDANTIC_COMPLETE.md  PYDANTIC_SUMMARY.md  PYDANTIC_VALIDATION.md  README.md  SYNC_WITH_MANUAL_SETUP.md  TYPEDDICT_MIGRATION.md  TYPE_HINTS_UPDATE.md  TYPE_SAFETY_ANALYSIS.md  UPDATE_ALL_NODES_WITH_PYDANTIC.md  music-metadata-checker-simple.yml  music-metadata-checker.yml
docs/: DOCUMENTATION_ANTI_DUPLICATION_GUIDE.md  FIXES_INDEX.md  FUNCTIONAL_SPEC.md  QUICKSTART.md  README.md  ROADMAP.md  音乐网站歌曲信息核验流程.md
scripts/: build_dify_bundle.py  test_workflow.py  validate_apis.py
tests/: test_phase1_enhancements.py
(+62 files in other folders)
